# dash-mpl-gallery

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION_INVENTORY.md  PAGES_MIGRATION.md  README.md  REQUIREMENTS.md  mkdocs.yml  pyproject.toml
.claude/: launch.json
docs/: api.md  architecture.md  backends.md  examples.md  fn-forms.md  index.md  parameters.md
examples/: capture_demo.py  corpframe_demo.py  gallery_corporate_demo.py  gallery_demo.py  gallery_multiplot_demo.py  interact.py  interact_demo.py  page_jupyter.ipynb  showcase.py
examples/gallery_multiplot/: gallery.json
examples/gallery_multiplot/inflation/scripts/: script_20260101_v1.py  script_20260325_v1.py  script_20260325_v2.py  script_20260325_v3.py  script_20260325_v4.py  script_20260325_v5.py  script_20260325_v6.py  script_20260401_v2.py  script_20260401_v4.py
examples/gallery_multiplot/multi_output/data/: data_20260101.csv
examples/gallery_multiplot/multi_output/scripts/: script_20260101_v1.py
examples/gallery_multiplot/plotly_demo/scripts/: script_20260101_v1.py
r-packages/corpframe/: DESCRIPTION  NAMESPACE
r-packages/corpframe/R/: frame_python.R  gg_corporate.R  shiny_export.R
src/dash_fn_interact/: __init__.py  _config_builder.py  _field_components.py  _page.py  _spec.py  backends.py  page.py
src/dash_fn_tools/: __init__.py  _config_builder.py  _spec.py
src/gallery_viewer/: __init__.py  _types.py  backend.py  config.py  gallery.py  params.py
src/gallery_viewer/pages/: __init__.py  detail.py  gallery.py
src/s5ndt/: config_builder.py  fig_export.py  wizard.py
tests/: test_smoke.py
tests/dash_fn_interact/: test_coerce_validate.py  test_dbc_fields.py  test_declarative_form.py  test_dmc_fields.py  test_field_components.py  test_fn_interact.py  test_forms.py  test_renderers.py  test_spec.py  test_utils.py
tests/dash_interact/: test_interact.py  test_page.py
tests/gallery_viewer/: conftest.py  test_backend.py  test_config.py  test_gallery.py  test_gallery_view.py  test_params.py  test_sidebar_tree.py
tests/integration/: UI_TEST_PLAN.md  conftest.py  test_fn_panel_integration.py  test_form_callbacks_integration.py  test_multi_backend_ui.py  test_tags_ui.py  test_user_stories_ui.py  test_workflows_ui.py
(+5 files in other folders)
