[project]
name = "gallery-viewer"
dynamic = ["version"]
description = "Configurable versioned script gallery dashboard for Dash — browse, edit, and execute data visualization scripts"
keywords = ["dash", "gallery", "viewer", "matplotlib", "plotly", "versioning", "dataviz"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
authors = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "dash>=2.17",
    "dash-bootstrap-components>=1.6",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.urls]
Homepage = "https://github.com/saemeon/dash-mpl-gallery"
Repository = "https://github.com/saemeon/dash-mpl-gallery"

[dependency-groups]
test = ["pytest", "pytest-cov", "matplotlib"]
doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mike"]
dev = [
    "ruff",
    "prek",
    "ty",
    { include-group = "test" },
    { include-group = "doc" },
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "src/gallery_viewer/_version.py"

[tool.setuptools.dynamic]
version = { attr = "gallery_viewer._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gallery_viewer = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/gallery_viewer --cov-report=term-missing"

[tool.ty.src]
include = ["src"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "PERF"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
# Gallery scripts call matplotlib.use("Agg") before other imports by design
"examples/**/scripts/*.py" = ["E402", "I001"]
